--- a/ASAG.ipynb
+++ b/ASAG.ipynb
@@ -316,22 +316,7 @@
         "id": "sxSYct7_H8D4",
         "outputId": "a78009e1-e929-4243-ff20-b45157422a40"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ad5108e045d246569b6d1c1b96691199",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/6 [00:00<?, ?ba/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "tokenized_dataset = dataset.map(preprocess_function, batched=True)"
       ]
@@ -385,30 +370,20 @@
         "id": "XXS8o5TUJK8d",
         "outputId": "45811653-3beb-4702-e194-4edca0074720"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "DatasetDict({\n",
-              "    train: Dataset({\n",
-              "        features: ['desired_answer', 'student_answer', 'label', 'input_ids', 'attention_mask'],\n",
-              "        num_rows: 4207\n",
-              "    })\n",
-              "    test: Dataset({\n",
-              "        features: ['desired_answer', 'student_answer', 'label', 'input_ids', 'attention_mask'],\n",
-              "        num_rows: 1052\n",
-              "    })\n",
-              "})"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "train_test = tokenized_dataset.train_test_split(test_size=0.2, seed=1178435)\n",
+        "train_test = tokenized_dataset.train_test_split(test_size=0.3, seed=1178435)\n",
         "train_test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "val_test = train_test['test'].train_test_split(test_size=0.5,)\n",
+        "val_test"
       ]
     },
     {
@@ -558,10 +533,12 @@
       "source": [
         "training_args = TrainingArguments(\n",
         "    output_dir=\"./results\",\n",
+        "    learning_rate=5e-5,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
         "    optim=\"adafactor\",\n",
-        "    num_train_epochs=15,\n",
+        "    num_train_epochs=8,\n",
+        "    weight_decay=0.01,\n",
         "    fp16=True\n",
         ")"
       ]
@@ -628,7 +605,7 @@
         "    model=model,\n",
         "    args=training_args,\n",
         "    train_dataset=train_test['train'],\n",
-        "    eval_dataset=train_test['test'],\n",
+        "    eval_dataset=val_test['train'],\n",
         "    tokenizer=tokenizer,\n",
         "    data_collator=data_collator,\n",
         "    compute_metrics=compute_metrics,\n",
@@ -675,6 +652,15 @@
       "outputs": [],
       "source": [
         "trainer.evaluate()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(val_test['test'])"
       ]
     },
     {
